# web-downloader

./: CMakeLists.txt  Makefile  README.md  prohlaseni.txt  zadani.txt
doc/: documentation.html  example.html  index.html  web-downloader-flowchart.drawio
examples/: run_server.bash
examples/sample_web/: index.html
src/: Application.cpp  Application.h  Enum.h  main.cpp  precomp.h
src/Html/: Html.cpp  Html.h  HtmlDebug.cpp  HtmlDebug.h  HtmlDumper.cpp  HtmlDumper.h  HtmlParser.cpp  HtmlParser.h
src/Html/Custom/: HtmlNotFound.cpp  HtmlNotFound.h
src/Http/: HttpClient.cpp  HttpClient.h  HttpMap.cpp  HttpMap.h  HttpPath.cpp  HttpPath.h
src/Task/: Task.cpp  Task.h  TaskBase.cpp  TaskBase.h  TaskDownloadFile.cpp  TaskDownloadFile.h  TaskDownloadImages.cpp  TaskDownloadImages.h  TaskDownloadLinks.cpp  TaskDownloadLinks.h  TaskDownloadPage.cpp  TaskDownloadPage.h  TaskDownloadWeb.cpp  TaskDownloadWeb.h  TaskModifyLinks.cpp  TaskModifyLinks.h  TaskModifyPageLinks.cpp  TaskModifyPageLinks.h
src/Task/404/: TaskSaveNotFoundPage.cpp  TaskSaveNotFoundPage.h
src/Task/File/: TaskDownloadFile.cpp  TaskDownloadFile.h  TaskSaveFile.cpp  TaskSaveFile.h
src/Task/Image/: TaskDownloadImages.cpp  TaskDownloadImages.h  TaskModifyImageLinks.cpp  TaskModifyImageLinks.h
src/Task/Style/: TaskDownloadStyle.cpp  TaskDownloadStyle.h  TaskDownloadStyles.cpp  TaskDownloadStyles.h
src/Task/Web/: TaskDownloadLinks.cpp  TaskDownloadLinks.h  TaskDownloadPage.cpp  TaskDownloadPage.h  TaskDownloadWeb.cpp  TaskDownloadWeb.h  TaskModifyLinks.cpp  TaskModifyLinks.h  TaskModifyPageLinks.h
